k8s/03_react-express-mysql/db-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose convert
    kompose.version: 1.21.0 ()
  creationTimestamp: null
  labels:
    io.kompose.service: db
  name: db
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: db
  strategy:
    type: Recreate
  template:
    metadata:
      annotations:
        kompose.cmd: kompose convert
        kompose.version: 1.21.0 ()
      creationTimestamp: null
      labels:
        io.kompose.network/private: "true"
        io.kompose.service: db
    spec:
      containers:
      - args:
        - --default-authentication-plugin=mysql_native_password
        image: mysql:8.0.19
        imagePullPolicy: ""
        name: db
        resources: {}
        volumeMounts:
        - mountPath: /run/secrets/db-password
          name: db-password
        - mountPath: /var/lib/mysql
          name: db-data
      restartPolicy: Always
      serviceAccountName: ""
      volumes:
      - name: db-password
        secret:
          items:
          - key: db-password
            path: db-password
          secretName: db-password
      - name: db-data
        persistentVolumeClaim:
          claimName: db-data
status: {}
