k8s/03_react-express-mysql/backend-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: kompose convert
    kompose.version: 1.21.0 ()
  creationTimestamp: null
  labels:
    io.kompose.service: backend
  name: backend
spec:
  ports:
  - name: "80"
    port: 80
    targetPort: 80
  - name: "9229"
    port: 9229
    targetPort: 9229
  - name: "9230"
    port: 9230
    targetPort: 9230
  selector:
    io.kompose.service: backend
status:
  loadBalancer: {}
