k8s/03_react-express-mysql/private-networkpolicy.yaml
apiVersion: extensions/v1beta1
kind: NetworkPolicy
metadata:
  creationTimestamp: null
  name: private
spec:
  ingress:
  - from:
    - podSelector:
        matchLabels:
          io.kompose.network/private: "true"
  podSelector:
    matchLabels:
      io.kompose.network/private: "true"
