k8s/03_react-express-mysql/public-networkpolicy.yaml
apiVersion: extensions/v1beta1
kind: NetworkPolicy
metadata:
  creationTimestamp: null
  name: public
spec:
  ingress:
  - from:
    - podSelector:
        matchLabels:
          io.kompose.network/public: "true"
  podSelector:
    matchLabels:
      io.kompose.network/public: "true"
